src/objects/Loans_History__c.object
<CustomObject>
    <fields>
        <fullName>EMI__c</fullName>
        <label>EMI?</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_remaining__c</fullName>
        <label>Number of Months remaining?</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purpose_of_the_Loan__c</fullName>
        <label>Purpose of the Loan?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Loan__c</fullName>
        <label>Type of Loan</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Relatives/ Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other MFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Where_do_you_save__c</fullName>
        <label>Where do you save?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Loans History</label>
    <nameField>
        <label>Loans History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>